--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "recharts": "^2.6.2"
+    "recharts": "^2.6.2",
+    "victory": "^36.6.10"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
