working on finnnub

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@nivo/line": "^0.83.0",
     "@nivo/pie": "^0.83.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "dotenv": "^16.0.3",
+    "finnhub": "^1.2.17",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
